# CoolVL

./: .gitignore  install.xml
doc/: CoolVLViewerReadme.txt  RestrainedLoveReadme.txt  asset_urls.txt  releasenotes-where.txt
etc/: message.xml
indra/: CMakeLists.txt  develop.py  winbuild.bat  winprepackage.bat
indra/cmake/: 00-Common.cmake  APR.cmake  BerkeleyDB.cmake  Boost.cmake  CMakeLists.txt  CopyWinLibs.cmake  FindHACD.cmake  FindHunSpell.cmake  GooglePerfTools.cmake  HACD.cmake  Hunspell.cmake  LLAudio.cmake  LLCommon.cmake  LLConvexDecomposition.cmake  LLPrimitive.cmake  LLWindow.cmake  Linking.cmake  Variables.cmake  Versions.cmake  WebKitLibPlugin.cmake
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h  llaudioengine_fmod.cpp  llaudioengine_openal.cpp  llstreamingaudio.h  llstreamingaudio_fmod.cpp  llstreamingaudio_fmod.h  llvorbisdecode.cpp  llvorbisencode.cpp
indra/llcharacter/: llbvhloader.cpp  llbvhloader.h  llcharacter.cpp  llcharacter.h  lleditingmotion.cpp  llgesture.cpp  llhandmotion.cpp  llheadrotmotion.cpp  lljoint.cpp  lljoint.h  llkeyframemotion.cpp  llkeyframemotionparam.cpp  llkeyframewalkmotion.cpp  llmotioncontroller.cpp  llmotioncontroller.h  llpose.h  llstatemachine.cpp  llvisualparam.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  bitpack.cpp  indra_constants.h  llapp.cpp  llapr.cpp  llapr.h  llassettype.cpp  llassettype.h  llavatarconstants.h  llavatarname.cpp  llavatarname.h  llboost.h  llchat.h  llcommon.cpp  llcommon.h  llcommonutils.cpp  llcommonutils.h  lldate.cpp  lldependencies.cpp  lldependencies.h  lldictionary.cpp  lldictionary.h  llerror.cpp  llerror.h  lleventapi.h  lleventdispatcher.h  llevents.cpp  llevents.h  lleventtimer.cpp  lleventtimer.h  llfasttimer.cpp  llfasttimer.h  llfile.cpp  llfixedbuffer.cpp  llfoldertype.cpp  llfoldertype.h  llframetimer.h  llinstancetracker.cpp  llinstancetracker.h  llliveappconfig.cpp  (+47 more)
indra/llcrashlogger/: llcrashlogger.cpp
indra/newview/: CMakeLists.txt  Info-CoolVLViewer.plist  RRInterface.cpp  RRInterface.h  cool_vl_viewer.icns  featuretable.txt  featuretable_linux.txt  featuretable_mac.txt  featuretable_solaris.txt  gpu_table.txt  hbfloaterdebugtags.cpp  hbfloaterdebugtags.h  hbfloatergrouptitles.cpp  hbfloatergrouptitles.h  hbfloaterrlv.cpp  hbfloaterrlv.h  hbfloatertextinput.cpp  hbfloatertextinput.h  hbpanelgrids.cpp  hbpanelgrids.h  hbprefscool.cpp  hbprefscool.h  jcfloaterareasearch.cpp  jcfloaterareasearch.h  llagent.cpp  llagent.h  llagentaccess.cpp  llagentaccess.h  llagentlanguage.cpp  llagentlanguage.h  llagentpilot.cpp  llagentwearables.cpp  llagentwearables.h  llappearance.h  llappearancemgr.cpp  llappearancemgr.h  llappviewer.cpp  llappviewer.h  llappviewerlinux.cpp  llappviewerlinux.h  (+563 more)
indra/newview/English.lproj/: InfoPlist.strings
indra/newview/app_settings/: debug_tags.xml  grids.xml  keywords.ini  settings.xml  settings_files.xml  settings_per_account.xml
indra/newview/app_settings/dictionaries/: dict_list.xml  sl.dic
indra/newview/character/: avatar_lad.xml
indra/newview/installers/linux/: Cool VL Viewer-1.26.4.mpi
indra/newview/installers/windows/: Cool VL Viewer-1.26.4.mpi
indra/newview/linux_tools/: handle_secondlifeprotocol.sh  wrapper.sh
indra/newview/res/: viewerRes.rc
indra/newview/skins/dark/: colors_base.xml
indra/newview/skins/dark/textures/: textures.xml
indra/newview/skins/default/: colors_base.xml
indra/newview/skins/default/html/de/loading-error/: index.html
indra/newview/skins/default/html/en-us/loading/: loading.html
indra/newview/skins/default/html/en-us/loading-error/: index.html
indra/newview/skins/default/html/en-us/splash/: splash.html
indra/newview/skins/default/html/en-us/tpv/: policy.html  tpv.html
indra/newview/skins/default/html/es/loading-error/: index.html
indra/newview/skins/default/html/fr/loading-error/: index.html
indra/newview/skins/default/html/ja/loading-error/: index.html
indra/newview/skins/default/html/ko/loading-error/: index.html
indra/newview/skins/default/html/pt/loading-error/: index.html
indra/newview/skins/default/textures/: ff_visible_map_theirs.tga  ff_visible_online_or_map_button_theirs.tga  fg_chat_button.tga  fg_notices_button.tga  inv_folder_inbox.tga  inv_folder_outbox.tga  inv_item_invalid.tga  inv_item_physics.tga  legacy_status_buy_currency.tga  legacy_status_no_build.tga  legacy_status_no_fly.tga  legacy_status_no_push.tga  legacy_status_no_scripts.tga  legacy_status_no_see.tga  legacy_status_no_voice.tga  no_notify_caution_icon.tga  status_no_see.tga  textures.xml
indra/newview/skins/default/xui/en-us/: floater_about.xml  floater_about_land.xml  floater_animation_preview.xml  floater_area_search.xml  floater_avatar_picker.xml  floater_avatar_textures.xml  floater_beacons.xml  floater_build_options.xml  floater_camera.xml  floater_chat_history.xml  floater_chat_history2.xml  floater_chatterbox2.xml  floater_choose_group.xml  floater_customize.xml  floater_debug_tags.xml  floater_directory.xml  floater_directory2.xml  floater_friends.xml  floater_group_info.xml  floater_groups.xml  floater_hardware_settings.xml  floater_image_preview.xml  floater_inspect.xml  floater_instant_message.xml  floater_instant_message_ad_hoc.xml  floater_instant_message_group.xml  floater_inventory.xml  floater_inventory_item_properties.xml  floater_inventory_view_finder.xml  floater_live_lsleditor.xml  floater_lsl_guide.xml  floater_make_new_outfit.xml  floater_media_browser.xml  floater_media_filter.xml  floater_mini_map.xml  floater_model_preview.xml  floater_moveview.xml  floater_mute.xml  floater_name_description.xml  floater_new_im.xml  (+66 more)
indra/newview/skins/silver/: colors_base.xml
indra/newview/skins/silver/xui/en-us/: floater_chat_history2.xml  floater_directory.xml  floater_directory2.xml  floater_live_lsleditor.xml  floater_script_ed_panel.xml  floater_tools.xml  panel_avatar.xml  panel_status_bar.xml  panel_status_bar2.xml  panel_toolbar.xml
scripts/: list-ll_debugs.pl  template_verifier.py  update_version_files.py
(+328 files in other folders)
